# pyca

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENCE.txt  README.md  pyproject.toml  requirements.txt  requirements_docs.txt  setup.py
docs/source/: conf.py  index.rst
example/: 2dCyclicAC.py  game_of_life.py  rule110.py  rule30.py  rulexxx.py  switch_rules.py
pyca/: __init__.py  celltype.py  observer.py  profiler.py  switch.py  universe1d.py  universe2d.py
pyca/music/: utils.py
pyca/rules/: BaseRule.py  Cyclic2D.py  Rules.py
tests/: test_music.py  test_universe.py
